<resources>
    <string name="app_name">PlansPop</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_register">Crear cuenta</string>
    <string name="title_activity_rem_pass">Recuperacion contraseña</string>
    <string name="title_activity_root">Plan POP</string>
    <string name="title_activity_add">Crear Plan</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="title_activity_mapa">MapaActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_plan">Detalles Plan</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="profile_activity">Perfil</string>

    <string name="action_add">Agregar</string>
    <string name="action_search">Buscar</string>
    <string name="nombre">Ingresar Nombre</string>
    <string name="descripcion">Ingresar Descripción</string>
    <string name="lugar">Lugar</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="Datos_cargados">Datos cargados</string>
    <string name="aceptar">Aceptar</string>
    <string name="cambiar">Cambiar</string>
    <string name="txt_logout">Cerrar sesión</string>
    <string name="txt_login">Iniciar Sesión</string>
    <string name="username">Nombre de Usuario</string>
    <string name="password">Contraseña</string>
    <string name="ingresar">Ingresar</string>

    <string name="siguiente">Siguiente</string>
    <string name="hint_pass">Password</string>
    <string name="hint_user">Username</string>
    <string name="txt_register">Regístrate en Plan POP!!</string>
    <string name="txt_remember">Olvidaste tu contraseña?</string>
    <string name="profile_name">Nombre:</string>
    <string name="profile_compl_name">My complete name</string>
    <string name="profile_email">Correo electornico:</string>
    <string name="hint_email_profile">example@example.com</string>
    <string name="profile_user">Usuario:</string>
    <string name="hint_user_profile">username</string>
    <string name="profile_sex">Genero:</string>
    <string name="hint_sex_profile">hombre/mujer</string>
    <string name="profile_birth">Fecha de nacimiento:</string>
    <string name="hint_birth_profile">DD/MM/YY</string>
    <string name="remember_pass">Recuperacion de contraseñas</string>
    <string name="text_remember_pass">Por favor coloca el correo electronico con el que abrio la cuenta para poder suministrarle el link de recuperacion de contraseña</string>
    <string name="remember_email">Email</string>
    <string name="remember_request">Enviar solicitud</string>
    <string name="text_edit">editar</string>
    <string name="hint_search">Buscar</string>
    <string name="txt_nombre">Nombre</string>
    <string name="txt_descripcion">Descripción</string>
    <string name="txt_date">Fecha</string>
    <string name="txt_hour">Hora</string>
    <string name="txt_accept">Aceptar</string>
    <string name="txt_photo_plan">Foto para el Plan</string>
    <string name="txt_select_photo">Elegir Foto</string>
    <string name="txt_data_personal">¿Ahora te preguntáremos tus datos personales?</string>
    <string name="hint_name_infop">Nombre completo</string>
    <string name="hint_birth_infop">Fecha nacimiento</string>
    <string name="hint_h_infop">Hombre</string>
    <string name="hint_m_infop">Mujer</string>
    <string name="hint_user_infop">Usuario</string>
    <string name="hint_pass_infop">Contraseña</string>
    <string name="hint_create_infop">Crear cuenta</string>
    <string name="txt_correo_info">¿Cuál es tu dirección de correo electrónico?</string>
    <string name="veri_email_info">Verificaremos si estás registrado en nuestro sistema</string>
    <string name="hint_email_infop">Correo Electronico</string>
    <string name="text_next">Continuar</string>
    <string name="title_cp">Únete a Plan POP</string>
    <string name="txt2_cp">Crea tu cuenta en pocos pasos</string>
    <string name="txt3_cp">Al registrarte, aceptas las condiciones de Plan POP y reconoces haber leido nuestras Politicas de datos, incluida la seccion sobre el uso de cookies. Es posible que recibas notificaciones de Plan POP, pero puedes desactivarlas en cualquier momento.</string>
    <string name="hint_name_template">Nombre</string>
    <string name="hint_date_tmplate">Fecha</string>
    <string name="hint_hour_template">Hora</string>
    <string name="hint_size_template">Lugar</string>
    <string name="hint_descrip_template">Descripción</string>
    <string name="name_hint_lisp">Nombre</string>
    <string name="hint_update_misp">Actualizar información</string>
    <string name="hint_edit_misp">Editar Lugar</string>
    <string name="hint_delete_misp">Eliminar</string>

    <string name="name">Nombre</string>
    <string name="description">Descripción</string>
</resources>
