<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_add"
        android:title="@string/action_add"
        android:icon="@drawable/ic_action_add_white"
        app:showAsAction="ifRoom"
        />
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_action_search_white"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        />
    <item
        android:id="@+id/menu_overflow"
        android:title="settings"
        android:icon="@drawable/ic_action_drop_down"
        app:showAsAction="always"
        >
        <menu>
            <item
                android:id="@+id/action_profile"
                android:title="Perfil"
                android:icon="@drawable/ic_action_profile_dark"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/action_logout"
                android:title="@string/txt_logout"
                android:icon="@drawable/ic_action_cancel_dark"
                app:showAsAction="never"
                />
        </menu>
    </item>

</menu>
