<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="simon.unicauca.edu.co.planpop.Fragments.Register_IpFragment">

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_correo_info"
        android:gravity="center"
        style="@style/Base.TextAppearance.AppCompat.Title"
        android:textStyle="bold"
        android:id="@+id/text1"
        android:layout_margin="@dimen/padding_medium"/>

    <TextView android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/veri_email_info"
        android:gravity="center"
        android:id="@+id/text2"
        android:layout_below="@id/text1"
        android:layout_margin="@dimen/padding_medium"
        style="@style/Base.TextAppearance.AppCompat.Body2"
        android:textSize="@dimen/text_size_info"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="@dimen/edt_width_infop"
        android:layout_height="wrap_content"
        android:id="@+id/email_ip"
        android:layout_below="@+id/text2"
        android:layout_centerHorizontal="true">
        <EditText
            android:id="@+id/edt_email"
            android:layout_width="@dimen/edt_width_infop"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email_infop"
            android:inputType="textEmailAddress"
            android:layout_gravity="center"
            android:drawableLeft="@drawable/ic_action_mail_dark"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        style="@style/Button"
        android:layout_width="@dimen/button_login_width"
        android:layout_height="@dimen/button_height_login"
        android:layout_gravity="center"
        android:text="@string/text_next"
        android:id="@+id/btn_nextip"
        android:layout_below="@+id/email_ip"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/padding_medium"
        android:drawableRight="@drawable/ic_action_next_white"/>

</RelativeLayout>
