<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/big_dimen"
    android:paddingRight="@dimen/big_dimen"
    android:paddingTop="@dimen/big_dimen"
    android:paddingBottom="@dimen/big_dimen"
    android:orientation="vertical"
    tools:context="com.example.frank.planspop.fragments.AddFragment">

    <TextView
        style="@style/TextAppearance.AppCompat.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="¿Qué piensas hacer?"
        android:gravity="center"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/nombre"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout_nombre">

        <EditText
            android:id="@+id/descripcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion"
            android:inputType="text"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_fecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout_nombre">

        <EditText
            android:id="@+id/fecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/fecha"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="date"/>


    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_hora"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/input_layout_nombre">

        <EditText
            android:id="@+id/hora"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hora"
            android:clickable="false"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:inputType="datetime"/>


    </android.support.design.widget.TextInputLayout>



    <Button
        android:id="@+id/btn_siguienteAddFragment"
        android:text="@string/siguiente"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@color/colorAccent"
        android:textColor="@color/colorText"
        />


</LinearLayout>