<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    tools:context=".LoginActivity"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_weight="6"
            android:id="@+id/table_img">

            <ImageView
                android:layout_width="@dimen/img_login_width"
                android:layout_height="@dimen/img_login_width"
                android:src="@drawable/logo_login"
                android:layout_gravity="center"
                android:id="@+id/logo"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_weight="3">

            <LinearLayout
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:descendantFocusability="beforeDescendants"
                android:focusableInTouchMode="true"
                android:id="@+id/linear_text">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/lay_edt_user"
                    android:layout_gravity="center_horizontal">
                    
                    <EditText
                        android:hint="@string/hint_user"
                        android:layout_width="@dimen/size_edt"
                        android:layout_height="match_parent"
                        android:id="@+id/edt_user"
                        android:gravity="center"
                        android:inputType="text"
                        android:drawableLeft="@drawable/ic_action_person_dark"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="@dimen/size_edt"
                    android:layout_height="wrap_content"
                    android:id="@+id/lay_edt_pass"
                    android:layout_gravity="center_horizontal">

                    <EditText
                        android:id="@+id/edt_pass"
                        android:layout_width="@dimen/size_edt"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_pass"
                        android:inputType="textPassword"
                        android:gravity="center"
                        android:drawableLeft="@drawable/ic_action_key_dark"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:layout_marginTop="@dimen/padding_small"
                    android:layout_width="@dimen/button_login_width"
                    android:layout_height="@dimen/button_height_login"
                    android:text="@string/txt_login"
                    android:id="@+id/btn_login"
                    android:gravity="center"
                    android:layout_gravity="center_horizontal"
                    android:drawableLeft="@drawable/ic_action_arrow_forward_white"
                    android:textColor="@color/blanco"
                    android:background="@color/colorPrimary"/>
            </LinearLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/margin_medium">

            <LinearLayout
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/linear_text2"
                android:layout_gravity="center_vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_register"
                    android:id="@+id/txt_register"
                    android:gravity="center"
                    android:textSize="@dimen/text_size"
                    android:linksClickable="true"
                    android:autoLink="web"
                    android:padding="@dimen/padding_login"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_remember"
                    android:id="@+id/txt_rpass"
                    android:gravity="center"
                    android:textSize="@dimen/text_size"
                    android:linksClickable="true"
                    android:autoLink="web"
                    android:padding="@dimen/padding_login"/>
            </LinearLayout>
        </TableRow>

    </TableLayout>

</LinearLayout>
